fixed MTCNN dash, side nav width to avoid clipping heading, mock_imports order

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -1,29 +1,44 @@
-@import 'theme.css';
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+@import "theme.css";
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap");
 
 body {
-    font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
-.wy-nav-side {
-    background: #383838;
-}
+.wy-menu-vertical,
+.wy-nav-side,
 .wy-side-nav-search {
-    background: #A76D60;
-}
-
-
-.wy-nav-content {
-    padding:1.618em 3.236em;
-    height:100%;
-    max-width:1000px;
-    margin:auto
-   }
-
-.wy-nav-content-wrap{
-    background: #fcfcfc;
+  width: 340px;
 }
 
 .wy-menu-vertical p.caption {
-    color: #FFFFFF;
+  color: #ffffff;
+}
+
+.wy-nav-content {
+  padding: 1.618em 3.236em;
+  height: 100%;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.wy-nav-content-wrap {
+  background: #fcfcfc;
+}
+
+.wy-nav-side {
+  background: #383838;
+}
+
+.wy-side-nav-search {
+  background: #a76d60;
+}
+
+.wy-side-scroll {
+  width: 360px;
+}
+
+.wy-table-responsive table.longtable td,
+.wy-table-responsive table.longtable th {
+  white-space: normal;
 }
